tests/errors/semantic/E010_base.zy
# E010_base {
    #> { public_fn }

    public_fn() { <~ "public" }
    secret_fn()  { <~ "secret" }
}
